--- a/home.html
+++ b/home.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"crossorigin="anonymous"> 
 <ul>
-  <li><a href=>Home</a></li>
-  <li><a href=>Store</a></li>
+  <li><a class="link" href=>Home</a></li>
+  <li><a class="link" href=>Store</a></li>
 </ul>
 <title>Rent-A-Flix</title>
 </head>
 <body>
 <center><h1><b>Rent-A-Flix</b></h1></center>
+<div class="container">
+<div id="img1">
+<img src="img/strange.jpg" alt="dr.strange" height="350" width="350">
+</div>
+<div id="img2">
+<img src="img/avatar.jpg" alt="avatar" height="350" width="350">
+</div>
+</div>
 <center><button id="store" type='buton'>STORE</button></center>
 </br>
 </br>
