fixed nav bar and moved button and removed banner of Rentaflix

--- a/home.html
+++ b/home.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <head>
-<link rel="stylesheet" href="home.css">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"crossorigin="anonymous"> 
-<ul>
-  <li><a class="link" href=>Home</a></li>
-  <li><a class="link" href=>Store</a></li>
-</ul>
+<link rel="stylesheet" href="home.css">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Rent-A-Flix</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">STORE</a></li>
+    </ul>
+  </div>
+</nav>
 <title>Rent-A-Flix</title>
 </head>
 <body>
-<center><h1><b>Rent-A-Flix</b></h1></center>
+<!--<center><h1><b>Rent-A-Flix</b></h1></center>-->
 <div class="container">
 <div id="img1">
-<img src="img/strange.jpg" alt="dr.strange" height="350" width="350">
+<img src="img/strange.jpg" alt="dr.strange" height="500" width="450">
 </div>
 <div id="img2">
-<img src="img/avatar.jpg" alt="avatar" height="350" width="350">
+<img src="img/avatar.jpg" alt="avatar" height="500" width="450">
 </div>
 </div>
-<center><button id="store" type='buton'>STORE</button></center>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+<center><button class="button" type='buton'>STORE</button></center>
 <center><h2><b>About</b></h2></center>
 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
 A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
