added a actual about

--- a/home.html
+++ b/home.html
@@ -17,7 +17,6 @@
 <title>Rent-A-Flix</title>
 </head>
 <body>
-<!--<center><h1><b>Rent-A-Flix</b></h1></center>-->
 <div class="container">
 <div id="img1">
 <img src="img/strange.jpg" alt="dr.strange" height="500" width="450">
@@ -25,12 +24,15 @@
 <div id="img2">
 <img src="img/avatar.jpg" alt="avatar" height="500" width="450">
 </div>
+<div id="img3">
+<img src="img/hellboy.jpg" alt="avatar" height="500" width="450">
 </div>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+</div>
+</br>
 <center><button class="button" type='buton'>STORE</button></center>
 <center><h2><b>About</b></h2></center>
-<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
-A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then</p>
+<center><p>Rent-A-Flix was foundeed in the basement of someones moms house in th year of 2015.</br>
+  Founded by some geek that has no life what so ever.</br>
+  He started this company so pepole could rent movies and comic books.</br>
+  At Rent-A-Flix you can rent VHS(yes really), DVDs, Special Edittions, Blu-Rays, and of course Comics.</p></center>
 </body>
