added the contents of the table for the store

--- a/store.html
+++ b/store.html
@@ -16,60 +16,119 @@
 <title>Rent-A-Flix STORE</title>
 <table>
   <tr>
-    <th>Poster</th>
-    <th>Name</th>
-    <th>Type</th>
-    <th>Rental price</th>
-    <th>Replacement price</th>
+    <th>Item</th>
   </tr>
   <tr>
-    <td><img src="img/strange.jpg" alt="dr.strange" height="250" width="210"></td>
+    <td><img src="img/strange.jpg" height="250" width="210"></td>
     <td>Doctor Strange</td>
     <td>Blu-Ray</td>
     <td>$8.00</td>
     <td>$25.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/avatar.jpg"  height="250" width="210"></td>
+    <td>Avatar: Extended Collectors Edition</td>
+    <td>special edition</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/beemovie.jpg"  height="250" width="210"></td>
+    <td>Bee Movie</td>
+    <td>dvd</td>
+    <td>$5.00</td>
+    <td>$20.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/cap.jpg"  height="250" width="210"></td>
+    <td>Captain America: Civil War</td>
+    <td>blu-ray</td>
+    <td>$8.00</td>
+    <td>$25.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/darknight.jpg"  height="250" width="210"></td>
+    <td>The Dark Knight 2-disc Edition</td>
+    <td>special edition</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/deadpool.jpg"  height="250" width="210"></td>
+    <td>Deadpool</td>
+    <td>dvd</td>
+    <td>$5.00</td>
+    <td>$20.00</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><img src="img/hellboy.jpg"  height="250" width="210"></td>
+    <td>Hellboy: Seed of Destruction</td>
+    <td>comic</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/hobbit.jpg"  height="250" width="210"></td>
+    <td>The Hobbit: Extended Edition</td>
+    <td>special edition</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/hulk.jpg"  height="250" width="210"></td>
+    <td>Hulk</td>
+    <td>vhs</td>
+    <td>$2.00</td>
+    <td>$5.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/ironman.jpg"  height="250" width="210"></td>
+    <td>Iron Man</td>
+    <td>dvd</td>
+    <td>$5.00</td>
+    <td>$20.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/it.jpg"  height="250" width="210"></td>
+    <td>It</td>
+    <td>vhs</td>
+    <td>$2.00</td>
+    <td>$5.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/kill.jpg"  height="250" width="210"></td>
+    <td>The Killing Joke</td>
+    <td>comic</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/lotr.jpg"  height="250" width="210"></td>
+    <td>Lord of the Rings: Fellowship of the Rings</td>
+    <td>vhs</td>
+    <td>$2.00</td>
+    <td>$5.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/pi.jpg"  height="250" width="210"></td>
+    <td>Pi</td>
+    <td>vhs</td>
+    <td>$2.00</td>
+    <td>$5.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/spidy.jpg"  height="250" width="210"></td>
+    <td>The Amazing Spider-man</td>
+    <td>comic</td>
+    <td>$10.00</td>
+    <td>$30.00</td>
+  </tr>
+  <tr>
+    <td><img src="img/x2.jpg"  height="250" width="210"></td>
+    <td>X2</td>
+    <td>dvd</td>
+    <td>$5.00</td>
+    <td>$20.00</td>
   </tr>
 </table>
 </head>
