--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#">HOME</a></li>
-      <li><a href="#">STORE</a></li>
+      <li><a href="store.html">STORE</a></li>
     </ul>
   </div>
 </nav>
@@ -31,7 +31,7 @@
 </br>
 <center><button class="button" type='buton'>STORE</button></center>
 <center><h2><b>About</b></h2></center>
-<center><p>Rent-A-Flix was foundeed in the basement of someones moms house in th year of 2015.</br>
+<center><p>Rent-A-Flix was foundeed in the basement of someones moms house in the year of 2015.</br>
   Founded by some geek that has no life what so ever.</br>
   He started this company so pepole could rent movies and comic books.</br>
   At Rent-A-Flix you can rent VHS(yes really), DVDs, Special Edittions, Blu-Rays, and of course Comics.</p></center>
