added order list and linked store page with home page

--- a/store.html
+++ b/store.html
@@ -8,15 +8,21 @@
       <a class="navbar-brand" href="#">Rent-A-Flix</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">HOME</a></li>
+      <li><a href="home.html">HOME</a></li>
       <li><a href="#">STORE</a></li>
     </ul>
   </div>
 </nav>
 <title>Rent-A-Flix STORE</title>
+</head>
+<body>
 <table>
   <tr>
     <th>Item</th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>    
   </tr>
   <tr>
     <td><img src="img/strange.jpg" height="250" width="210"></td>
@@ -131,4 +137,40 @@
     <td>$20.00</td>
   </tr>
 </table>
-</head>
+<h2> Please check the box of the item(s) you would like to rent</h2>
+<ul>
+<li>Doctor Strange
+  <input type="checkbox" name="amount" value="number"></li>
+<li>Avatar: Extended Collectors Edition
+<input type="checkbox" name="amount" value="number"></li>
+<li>Bee Movie
+<input type="checkbox" name="amount" value="number"></li>
+<li>Captain America: Civil War
+<input type="checkbox" name="amount" value="number"></li>
+<li>The Dark Knight 2-disc Edition
+<input type="checkbox" name="amount" value="number"></li>
+<li>Deadpool
+<input type="checkbox" name="amount" value="number"></li>
+<li>Hellboy: Seed of Destruction
+<input type="checkbox" name="amount" value="number"></li>
+<li>The Hobbit: Extended Edition
+<input type="checkbox" name="amount" value="number"></li>
+<li>Hulk
+<input type="checkbox" name="amount" value="number"></li>
+<li>Iron Man
+<input type="checkbox" name="amount" value="number"></li>
+<li>It
+<input type="checkbox" name="amount" value="number"></li>
+<li>The Killing Joke
+<input type="checkbox" name="amount" value="number"></li>
+<li>Lord of the Rings: Fellowship of the Rings
+<input type="checkbox" name="amount" value="number"></li>
+<li>Pi
+<input type="checkbox" name="amount" value="number"></li>
+<li>The Amazing Spider-man
+<input type="checkbox" name="amount" value="number"></li>
+<li>X2
+<input type="checkbox" name="amount" value="number"></li>
+</ul>
+<center><button class="button" type='buton'>Submit</button></center>
+</body>
