added a banner and fixed top three images

--- a/home.html
+++ b/home.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
+<html>
 <head>
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"crossorigin="anonymous"> 
 <link rel="stylesheet" href="home.css">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Rent-A-Flix</a>
+      <a class="navbar-brand" href="home.html">Rent-A-Flix</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#">HOME</a></li>
+      <li><a href="home.html">HOME</a></li>
       <li><a href="store.html">STORE</a></li>
     </ul>
   </div>
@@ -17,22 +17,17 @@
 <title>Rent-A-Flix</title>
 </head>
 <body>
+<center><img id="banner" src="img/banner.jpg"></center>
 <div class="container">
-<div id="img1">
-<img src="img/strange.jpg" alt="dr.strange" height="500" width="450">
-</div>
-<div id="img2">
-<img src="img/avatar.jpg" alt="avatar" height="500" width="450">
-</div>
-<div id="img3">
-<img src="img/hellboy.jpg" alt="avatar" height="500" width="450">
-</div>
+<img class="img1" src="img/strange.jpg">
+<img class="img1" src="img/avatar.jpg">
+<img class="img1" src="img/hellboy.jpg">
 </div>
 </br>
-<center><button class="button" type='buton'>STORE</button></center>
 <center><h2><b>About</b></h2></center>
 <center><p>Rent-A-Flix was foundeed in the basement of someones moms house in the year of 2015.</br>
   Founded by some geek that has no life what so ever.</br>
   He started this company so pepole could rent movies and comic books.</br>
   At Rent-A-Flix you can rent VHS(yes really), DVDs, Special Edittions, Blu-Rays, and of course Comics.</p></center>
 </body>
+</html>
