changed the look of the table containg the inventory

--- a/store.html
+++ b/store.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"crossorigin="anonymous"> 
 <link rel="stylesheet" href="store.css">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Rent-A-Flix</a>
+      <a class="navbar-brand" href="home.html">Rent-A-Flix</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="home.html">HOME</a></li>
-      <li><a href="#">STORE</a></li>
+      <li><a href="store.html">STORE</a></li>
     </ul>
   </div>
 </nav>
@@ -19,128 +20,186 @@
 <table>
   <tr>
     <th>Item</th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>    
+    <th>Item information</th>  
   </tr>
   <tr>
     <td><img src="img/strange.jpg" height="250" width="210"></td>
-    <td>Doctor Strange</td>
-    <td>Blu-Ray</td>
-    <td>$8.00</td>
-    <td>$25.00</td>
+    <td>
+      <h2>Doctor Strange</h2>
+    <ul>
+    <li>Type: Blu-Ray</li>
+    <li>Rent Value: $8.00</li>
+    <li>Replacement Value: $25.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/avatar.jpg"  height="250" width="210"></td>
-    <td>Avatar: Extended Collectors Edition</td>
-    <td>special edition</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>Avatar: Extended Collectors Edition</h2>
+    <ul>
+    <li>Type: Special Edition</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/beemovie.jpg"  height="250" width="210"></td>
-    <td>Bee Movie</td>
-    <td>dvd</td>
-    <td>$5.00</td>
-    <td>$20.00</td>
+    <td>
+    <h2>Bee Movie</h2>
+    <ul>
+    <li>Type: dvd</li>
+    <li>Rent Value: $5.00</li>
+    <li>Replacement: $20.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/cap.jpg"  height="250" width="210"></td>
-    <td>Captain America: Civil War</td>
-    <td>blu-ray</td>
-    <td>$8.00</td>
-    <td>$25.00</td>
+    <td>
+    <h2>Captain America: Civil War</h2>
+    <ul>
+    <li>Type: Blu-ray</li>
+    <li>Rent Value: $8.00</li>
+    <li>Replacement Value: $25.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/darknight.jpg"  height="250" width="210"></td>
-    <td>The Dark Knight 2-disc Edition</td>
-    <td>special edition</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>The Dark Knight 2-disc Edition</h2>
+    <ul>
+    <li>Type: Special Edition</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/deadpool.jpg"  height="250" width="210"></td>
-    <td>Deadpool</td>
-    <td>dvd</td>
-    <td>$5.00</td>
-    <td>$20.00</td>
+    <td>
+    <h2>Deadpool</h2>
+    <ul>
+    <li>Type: DVD</li>
+    <li>Rent Value: $5.00</li>
+    <li>Replacement Value: $20.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/hellboy.jpg"  height="250" width="210"></td>
-    <td>Hellboy: Seed of Destruction</td>
-    <td>comic</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>Hellboy: Seed of Destruction</h2>
+    <ul>
+    <li>Type: Comic</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
   </tr>
   <tr>
     <td><img src="img/hobbit.jpg"  height="250" width="210"></td>
-    <td>The Hobbit: Extended Edition</td>
-    <td>special edition</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>The Hobbit: Extended Edition</h2>
+    <ul>
+    <li>Type: special edition</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/hulk.jpg"  height="250" width="210"></td>
-    <td>Hulk</td>
-    <td>vhs</td>
-    <td>$2.00</td>
-    <td>$5.00</td>
+    <td>
+    <h2>Hulk</h2>
+    <ul>
+    <li>Type: vhs</li>
+    <li>Rent Value: $2.00</li>
+    <li>Replacement Value: $5.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/ironman.jpg"  height="250" width="210"></td>
-    <td>Iron Man</td>
-    <td>dvd</td>
-    <td>$5.00</td>
-    <td>$20.00</td>
+    <td>
+    <h2>Iron Man</h2>
+    <ul>
+    <li>Type: dvd</li>
+    <li>Rent Value: $5.00</li>
+    <li>Replacement Value: $20.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/it.jpg"  height="250" width="210"></td>
-    <td>It</td>
-    <td>vhs</td>
-    <td>$2.00</td>
-    <td>$5.00</td>
+    <td>
+    <h2>It</h2>
+    <ul>
+    <li>Type: vhs</li>
+    <li>Rent Value: $2.00</li>
+    <li>Replacement Value: $5.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/kill.jpg"  height="250" width="210"></td>
-    <td>The Killing Joke</td>
-    <td>comic</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>The Killing Joke</h2>
+    <ul>
+    <li>Type: comic</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
+    </td>
   </tr>
   <tr>
     <td><img src="img/lotr.jpg"  height="250" width="210"></td>
-    <td>Lord of the Rings: Fellowship of the Rings</td>
-    <td>vhs</td>
-    <td>$2.00</td>
-    <td>$5.00</td>
+    <td>
+    <h2>Lord of the Rings: Fellowship of the Rings</h2>
+    <ul>
+    <li>Type: vhs</li>
+    <li>Rent Value: $2.00</li>
+    <li>Replacement Value: $5.00</li>
+    </ul>  
+    </td>
   </tr>
   <tr>
     <td><img src="img/pi.jpg"  height="250" width="210"></td>
-    <td>Pi</td>
-    <td>vhs</td>
-    <td>$2.00</td>
-    <td>$5.00</td>
+    <td>
+    <h2>Pi</h2>
+    <li>Type: vhs</li>
+    <li>Rent Value: $2.00</li>
+    <li>Replacement Value: $5.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/spidy.jpg"  height="250" width="210"></td>
-    <td>The Amazing Spider-man</td>
-    <td>comic</td>
-    <td>$10.00</td>
-    <td>$30.00</td>
+    <td>
+    <h2>The Amazing Spider-man</h2>
+    <ul>
+    <li>Type: comic</li>
+    <li>Rent Value: $10.00</li>
+    <li>Replacement Value: $30.00</li>
+    </ul>
+    </td>
   </tr>
   <tr>
     <td><img src="img/x2.jpg"  height="250" width="210"></td>
-    <td>X2</td>
-    <td>dvd</td>
-    <td>$5.00</td>
-    <td>$20.00</td>
+    <td>
+    <h2>X2</h2>
+    <ul>
+    <li>Type: dvd</li>
+    <li>Rent Value: $5.00</li>
+    <li>Replacement Value: $20.00</li>
+    </ul>
+    </td>
   </tr>
 </table>
 <h2> Please check the box of the item(s) you would like to rent</h2>
+
+  <input type="checkbox" name="dr_strange" id="dr_strange"></li><label for="dr_strange">Dr. Strange</label>
+
 <ul>
-<li>Doctor Strange
-  <input type="checkbox" name="amount" value="number"></li>
 <li>Avatar: Extended Collectors Edition
 <input type="checkbox" name="amount" value="number"></li>
 <li>Bee Movie
@@ -174,3 +233,4 @@
 </ul>
 <center><button class="button" type='buton'>Submit</button></center>
 </body>
+</html>
