chagedthe order list so it is easier to understand

--- a/store.html
+++ b/store.html
@@ -196,41 +196,37 @@
   </tr>
 </table>
 <h2> Please check the box of the item(s) you would like to rent</h2>
-
-  <input type="checkbox" name="dr_strange" id="dr_strange"></li><label for="dr_strange">Dr. Strange</label>
-
-<ul>
-<li>Avatar: Extended Collectors Edition
-<input type="checkbox" name="amount" value="number"></li>
-<li>Bee Movie
-<input type="checkbox" name="amount" value="number"></li>
-<li>Captain America: Civil War
-<input type="checkbox" name="amount" value="number"></li>
-<li>The Dark Knight 2-disc Edition
-<input type="checkbox" name="amount" value="number"></li>
-<li>Deadpool
-<input type="checkbox" name="amount" value="number"></li>
-<li>Hellboy: Seed of Destruction
-<input type="checkbox" name="amount" value="number"></li>
-<li>The Hobbit: Extended Edition
-<input type="checkbox" name="amount" value="number"></li>
-<li>Hulk
-<input type="checkbox" name="amount" value="number"></li>
-<li>Iron Man
-<input type="checkbox" name="amount" value="number"></li>
-<li>It
-<input type="checkbox" name="amount" value="number"></li>
-<li>The Killing Joke
-<input type="checkbox" name="amount" value="number"></li>
-<li>Lord of the Rings: Fellowship of the Rings
-<input type="checkbox" name="amount" value="number"></li>
-<li>Pi
-<input type="checkbox" name="amount" value="number"></li>
-<li>The Amazing Spider-man
-<input type="checkbox" name="amount" value="number"></li>
-<li>X2
-<input type="checkbox" name="amount" value="number"></li>
-</ul>
+  <input type="checkbox" name="dr_strange" id="dr_strange"> <label for="dr_strange">Dr. Strange</label>
+  </br>
+  <input type="checkbox" name="avatar" id="avatar"> <label for="avatar">Avatar: Extended Collectors Edition</label>
+  </br>
+  <input type="checkbox" name="bee" id="bee"> <label for="bee">Bee Movie</label>
+  </br>
+  <input type="checkbox" name="cap" id="cap"> <label for="cap">Captain America: Civil War</label>
+  </br>
+  <input type="checkbox" name="bat" value="bat"> <label for="bat">The Dark Knight 2-disc Edition</label>
+  </br>
+  <input type="checkbox" name="wade" id="wade"> <label for="wade">Deadpool</label>
+  </br>
+  <input type="checkbox" name="hellboy" id="hellboy"> <label for="hellboy">Hellboy: Seed of Destruction</label>
+  </br>
+  <input type="checkbox" name="billbo" id="billbo"> <label for="billbo">The Hobbit: Extended Edition</label>
+  </br>
+  <input type="checkbox" name="hulk" value="hulk"> <label for="hulk">Hulk</label>
+  </br>
+  <input type="checkbox" name="tony" id="tony"> <label for="tony"> Iron Man</label>
+  </br>
+  <input type="checkbox" name="it" id="it"> <label for="it">It</label>
+  </br>
+  <input type="checkbox" name="joke" id="joke"> <label for="joke">The Killing Joke</label>
+  </br>
+  <input type="checkbox" name="gandalf" id="gandalf"> <label for="gandalf">Lord of the Rings: Fellowship of the Rings</label>
+  </br>
+  <input type="checkbox" name="pi" id="pi"> <label for="pi">Pi</label>
+  </br>
+  <input type="checkbox" name="spidy" id="spidy"> <label for="spidy">The Amazing Spider-man</label>
+  </br>
+  <input type="checkbox" name="x2" id="x2"> <label for="x2">X2</label>
 <center><button class="button" type='buton'>Submit</button></center>
 </body>
 </html>
