changed some of the text in the inventory list

--- a/store.html
+++ b/store.html
@@ -49,7 +49,7 @@
     <td>
     <h2>Bee Movie</h2>
     <ul>
-    <li>Type: dvd</li>
+    <li>Type: DVD</li>
     <li>Rent Value: $5.00</li>
     <li>Replacement: $20.00</li>
     </ul>
@@ -60,7 +60,7 @@
     <td>
     <h2>Captain America: Civil War</h2>
     <ul>
-    <li>Type: Blu-ray</li>
+    <li>Type: Blu-Ray</li>
     <li>Rent Value: $8.00</li>
     <li>Replacement Value: $25.00</li>
     </ul>
@@ -102,7 +102,7 @@
     <td>
     <h2>The Hobbit: Extended Edition</h2>
     <ul>
-    <li>Type: special edition</li>
+    <li>Type: Special Edition</li>
     <li>Rent Value: $10.00</li>
     <li>Replacement Value: $30.00</li>
     </ul>
@@ -113,7 +113,7 @@
     <td>
     <h2>Hulk</h2>
     <ul>
-    <li>Type: vhs</li>
+    <li>Type: VHS</li>
     <li>Rent Value: $2.00</li>
     <li>Replacement Value: $5.00</li>
     </ul>
@@ -124,7 +124,7 @@
     <td>
     <h2>Iron Man</h2>
     <ul>
-    <li>Type: dvd</li>
+    <li>Type: DVD</li>
     <li>Rent Value: $5.00</li>
     <li>Replacement Value: $20.00</li>
     </ul>
@@ -135,7 +135,7 @@
     <td>
     <h2>It</h2>
     <ul>
-    <li>Type: vhs</li>
+    <li>Type: VHS</li>
     <li>Rent Value: $2.00</li>
     <li>Replacement Value: $5.00</li>
     </ul>
@@ -146,7 +146,7 @@
     <td>
     <h2>The Killing Joke</h2>
     <ul>
-    <li>Type: comic</li>
+    <li>Type: Comic</li>
     <li>Rent Value: $10.00</li>
     <li>Replacement Value: $30.00</li>
     </td>
@@ -156,7 +156,7 @@
     <td>
     <h2>Lord of the Rings: Fellowship of the Rings</h2>
     <ul>
-    <li>Type: vhs</li>
+    <li>Type: VHS</li>
     <li>Rent Value: $2.00</li>
     <li>Replacement Value: $5.00</li>
     </ul>  
@@ -166,7 +166,7 @@
     <td><img src="img/pi.jpg"  height="250" width="210"></td>
     <td>
     <h2>Pi</h2>
-    <li>Type: vhs</li>
+    <li>Type: VHS</li>
     <li>Rent Value: $2.00</li>
     <li>Replacement Value: $5.00</li>
     </ul>
@@ -177,7 +177,7 @@
     <td>
     <h2>The Amazing Spider-man</h2>
     <ul>
-    <li>Type: comic</li>
+    <li>Type: Comic</li>
     <li>Rent Value: $10.00</li>
     <li>Replacement Value: $30.00</li>
     </ul>
@@ -188,7 +188,7 @@
     <td>
     <h2>X2</h2>
     <ul>
-    <li>Type: dvd</li>
+    <li>Type: DVD</li>
     <li>Rent Value: $5.00</li>
     <li>Replacement Value: $20.00</li>
     </ul>
