fixed some minor typos

--- a/store.html
+++ b/store.html
@@ -212,7 +212,7 @@
   </br>
   <input type="checkbox" name="billbo" id="billbo"> <label for="billbo">The Hobbit: Extended Edition</label>
   </br>
-  <input type="checkbox" name="hulk" value="hulk"> <label for="hulk">Hulk</label>
+  <input type="checkbox" name="hulk" id="hulk"> <label for="hulk">Hulk</label>
   </br>
   <input type="checkbox" name="tony" id="tony"> <label for="tony"> Iron Man</label>
   </br>
@@ -228,5 +228,7 @@
   </br>
   <input type="checkbox" name="x2" id="x2"> <label for="x2">X2</label>
 <center><button class="button" type='buton'>Submit</button></center>
+<script src="jquery-3.1.1.js"></script>
+<script src="rent.js"></script>
 </body>
 </html>
