--- a/home.html
+++ b/home.html
@@ -51,6 +51,6 @@
   He started this company so pepole could rent movies and comic books.</br>
   At Rent-A-Flix you can rent VHS(yes really), DVDs, Special Edittions, Blu-Rays, and of course Comics.</p></center>
 <script src="jquery-3.1.1.js"></script>
-<script src="rent.js"></script>
+<script src="carosel.js"></script>
 </body>
 </html>
