fixed submit button syntax

--- a/store.html
+++ b/store.html
@@ -227,7 +227,7 @@
   <input type="checkbox" name="spidy" id="spidy"> <label for="spidy">The Amazing Spider-man</label>
   </br>
   <input type="checkbox" name="x2" id="x2"> <label for="x2">X2</label>
-<center><button class="button" type='buton'>Submit</button></center>
+<center><button class="button" type='buton'id="submit">Submit</button></center>
 <script src="jquery-3.1.1.js"></script>
 <script src="rent.js"></script>
 </body>
