--- a/store.html
+++ b/store.html
@@ -6,10 +6,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="home.html">Rent-A-Flix</a>
+      <a class="navbar-brand" href="index.html">Rent-A-Flix</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="home.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="store.html">STORE</a></li>
     </ul>
   </div>
